# fhirpath-rs

./: .dockerignore  .gitattributes  .gitignore  .output.txt  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CHANGELOG_AUTOMATION.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  Dockerfile.build  LICENSE-APACHE  LICENSE-MIT  NEXT_TASKS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  RELEASE.md  TEST_COVERAGE.md  VALIDATION_PROVIDER_PLAN.md  VERSIONING.md  benchmark.md  build.rs  cliff.toml  debug_length_test.rs  fhirpath-workspace.code-workspace  fhirpath_type_reflection_analysis.md  fix_operator.sh  justfile  run_benchmarks.sh  rustfmt.toml  string_test_check.sh  test.json
crates/fhirpath-analyzer/: Cargo.toml  README.md
crates/fhirpath-analyzer/benches/: analyzer_bench.rs
crates/fhirpath-analyzer/examples/: basic_analysis.rs  children_analysis.rs  function_validation.rs
crates/fhirpath-analyzer/src/: analyzer.rs  bridge_constraint_analyzer.rs  bridge_error_reporter.rs  bridge_field_validator.rs  bridge_path_navigator.rs  cache.rs  children_analyzer.rs  config.rs  error.rs  field_validator.rs  function_analyzer.rs  lib.rs  model_provider_ext.rs  tests.rs  types.rs
crates/fhirpath-analyzer/tests/: analyzer_comprehensive.rs  basic_analysis.rs  bridge_integration_tests.rs  children_function_test.rs  field_validation_tests.rs  function_analysis.rs  regression.rs  spec_compliance.rs  test_config.rs
crates/fhirpath-ast/: Cargo.toml
crates/fhirpath-ast/src/: expression.rs  intern.rs  lib.rs  visitor.rs
crates/fhirpath-bench/: Cargo.toml  README.md
crates/fhirpath-bench/src/: lib.rs  main.rs  profiling.rs
crates/fhirpath-benchmarks/: Cargo.toml
crates/fhirpath-benchmarks/fixtures/: medium.json
crates/fhirpath-benchmarks/src/: benchmark_runner.rs  lib.rs  performance_metrics.rs  profiling.rs
crates/fhirpath-cli/: .gitignore  Cargo.toml  README.md  build.rs
crates/fhirpath-cli/examples/: README.md  basic_evaluation.rs  batch_processing.rs  custom_formatter.rs
crates/fhirpath-cli/src/: lib.rs  main.rs
crates/fhirpath-compiler/: Cargo.toml
crates/fhirpath-compiler/src/: bytecode.rs  bytecode_cache.rs  compiler.rs  lib.rs  optimizer.rs  vm.rs
crates/fhirpath-core/: Cargo.toml
crates/fhirpath-core/src/: error.rs  evaluation.rs  lib.rs  temporal.rs  types.rs  value.rs  vm.rs
crates/fhirpath-dev-tools/: Cargo.toml
crates/fhirpath-dev-tools/examples/: dom3-bench.rs
crates/fhirpath-dev-tools/src/: common.rs  lib.rs  main.rs  metadata.rs  test_support.rs
crates/fhirpath-diagnostics/: Cargo.toml
crates/fhirpath-diagnostics/src/: builder.rs  diagnostic.rs  diagnostic_reporter.rs  enhanced_diagnostic.rs  formatter.rs  lib.rs  location.rs  lsp.rs
crates/fhirpath-evaluator/: Cargo.toml  test_script.rs
crates/fhirpath-evaluator/src/: bridge_navigation.rs  bundle_arc.rs  cache.rs  collections.rs  context.rs  engine.rs  error.rs  evaluation.rs  function_optimizer.rs  functions.rs  lambda.rs  lib.rs  navigation.rs  operations.rs  parsing.rs  shared_context.rs  type_checker.rs  utils.rs  validator.rs
crates/fhirpath-evaluator/tests/: bridge_evaluator_integration_tests.rs  polymorphic_tests.rs
crates/fhirpath-lsp/: Cargo.toml  README.md
crates/fhirpath-lsp/benches/: lsp_bench.rs
crates/fhirpath-lsp/src/: cache.rs  config.rs  directives.rs  document.rs  lib.rs  main.rs  metrics.rs  server.rs  watcher.rs
crates/fhirpath-lsp/tests/: document_parsing_tests.rs
crates/fhirpath-model/: Cargo.toml
crates/fhirpath-model/benches/: cache_benchmarks.rs  registry_benchmarks.rs  (+1 more)
crates/fhirpath-parser/: Cargo.toml  debug_not.rs
crates/fhirpath-registry/: Cargo.toml
crates/fhirpath-tools/: Cargo.toml
crates/octofhir-fhirpath/: Cargo.toml
fhirpath-ast/: Cargo.toml  README.md
fhirpath-ast/src/: expression.rs  intern.rs  lib.rs  operator.rs  visitor.rs
fhirpath-core/: Cargo.toml  TEST_COVERAGE.md  test_output.txt
fhirpath-core/examples/: test_ucum_integration.rs
fhirpath-core/src/: ast.rs  debug_test.rs  engine.rs  error.rs  errors.rs  evaluator.rs  fhir_schema.rs  lambda_test.rs  lexer.rs  lib.rs  model.rs  optimized_model.rs  optimized_parser.rs  parser.rs  types.rs  ucum_test.rs  value_ext.rs
fhirpath-core/tests/: context_validation_test.rs  coverage_report_simple.rs  failed_expressions_test.rs  integration_test_runner.rs  official_fhirpath_tests.rs  parser_test.rs  run_official_tests.rs  test_all_debug.rs  visitor_test.rs
fhirpath-diagnostics/: Cargo.toml  README.md
fhirpath-diagnostics/src/: builder.rs  diagnostic.rs  diagnostic_reporter.rs  enhanced_diagnostic.rs  formatter.rs  lib.rs  location.rs  lsp.rs
fhirpath-evaluator/: Cargo.toml
fhirpath-evaluator/examples/: run_official_tests.rs
fhirpath-evaluator/src/: context.rs  engine.rs  error.rs  lib.rs
fhirpath-model/: Cargo.toml  README.md
fhirpath-model/src/: error.rs  lib.rs  provider.rs  quantity.rs  resource.rs  schema.rs  type_coercion.rs  types.rs  value.rs
fhirpath-parser/: Cargo.toml
fhirpath-parser/examples/: performance_test.rs
fhirpath-parser/src/: error.rs  error_recovery.rs  lexer.rs  lib.rs  parser.rs  pratt.rs  span.rs  tokenizer.rs
fhirpath-parser/tests/: indexer_parse_test.rs
fhirpath-registry/: Cargo.toml
fhirpath-registry/examples/: documentation_generation.rs  hybrid_functions.rs
fhirpath-registry/src/: function.rs  lib.rs  operator.rs  operator_old.rs  signature.rs
fhirpath-registry/tests/: string_functions_test.rs
tests/: Cargo.toml  analyzer_tests.rs.disabled  coverage_report_simple.rs  failed_expressions_test.rs  integration_clinical_scenarios.rs  integration_concurrent_evaluation.rs  integration_cross_crate.rs  integration_fhirpath_evaluation.rs  integration_healthcare_data.rs  integration_memory_monitoring.rs  integration_performance_large_datasets.rs  integration_schema_validation.rs  integration_test_runner.rs  model_provider_tests.rs  resolve_function_test.rs  run_official_tests.rs  simple_integration.rs  test_utils.rs
tests/utils/: integration_test_helpers.rs  mod.rs
(+2468 files in other folders)
