[workspace]
members = [
    "crates/octofhir-fhirpath",
    "crates/fhirpath-core",
    "crates/fhirpath-ast",
    "crates/fhirpath-diagnostics",
    "crates/fhirpath-parser",
    "crates/fhirpath-model",
    "crates/fhirpath-registry",
    "crates/fhirpath-evaluator",
    "crates/fhirpath-tools",
    "crates/fhirpath-bench",
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.4.5"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/fhirpath-rs"
homepage = "https://github.com/octofhir/fhirpath-rs"

[workspace.dependencies]
# Core dependencies
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = "6.1.0"
glob = "0.3"
hex = "0.4"
indexmap = "2.10.0"
log = "0.4.20"
lru = "0.16"
nom = "8.0.0"
nom_locate = "5.0.0-beta.5"
octofhir-ucum = { version = "0.5.1", features = ["fhir", "serde"] }
octofhir-fhir-model = { version = "0.1.1", features = ["serde"] }
octofhir-fhirschema = { version = "0.2.2", features = ["memory-storage"] }
octofhir-canonical-manager = { version = "0.1.4" }
url = "2.5"
percent-encoding = "2.3"
parking_lot = "0.12.4"
regex = "1.11.1"
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }
rustc-hash = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
smallvec = { version = "1.11", features = ["serde"] }
thiserror = "2"
typed-arena = "2.0.2"
bumpalo = { version = "3.16", features = ["collections"] }
unicode-xid = "0.2.6"
once_cell = "1.21"
pprof = { version = "0.15.0", features = ["flamegraph"] }

# Additional dependencies for evaluator
rayon = "1"
tracing = "0.1"
uuid = { version = "1.5", features = ["v4", "serde"] }

# Async dependencies
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.47.1", features = ["full"] }

# HTTP client for external profile fetching
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
human-panic = "2.0"

# Optional diagnostic dependencies
colored = "3.0.0"
lsp-types = "0.97.0"
