[workspace]
members = [
    "crates/octofhir-fhirpath",
    "crates/fhirpath-cli",
    "crates/fhirpath-dev-tools"
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.4.33"
edition = "2024"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/fhirpath-rs"
homepage = "https://github.com/octofhir/fhirpath-rs"

[workspace.dependencies]
# Core dependencies
anyhow = "1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
glob = "0.3"
hex = "0.4"
indexmap = "2.10.0"
log = "0.4"
octofhir-ucum = { version = "0.5.1", features = ["fhir", "serde"] }
octofhir-fhir-model = { version = "0.1.7", features = ["serde", "http-client"] }
octofhir-canonical-manager = { version = "0.1.23" }
papaya = "0.2"
url = "2.5"
percent-encoding = "2.3"
parking_lot = "0.12.4"
regex = "1.11.1"
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.38"
smallvec = { version = "1.13", features = ["serde", "const_new"] }
thiserror = "2"
once_cell = "1.21"
pprof = { version = "0.15.0", features = ["flamegraph"] }

rayon = "1"
tracing = "0.1"
uuid = { version = "1.19", features = ["v4", "serde"] }

async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.47.1", features = ["full"] }

reqwest = { version = "0.12.22", features = [
    "json",
    "rustls-tls",
], default-features = false }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
human-panic = "2.0"

# Optional diagnostic dependencies
colored = "3.0.0"

[workspace.lints.rust]
missing_docs = "allow"

[workspace.lints.clippy]
wildcard_imports = "warn"
module_name_repetitions = "allow"
redundant_pub_crate = "warn"

# Reduce debug info for Windows CI to avoid LNK1318 errors
[profile.dev]
debug = 0
strip = "symbols"

[profile.test]
debug = 0
strip = "symbols"

[profile.release]
debug = 0
strip = "symbols"

# Windows-specific profile to avoid LNK1318 errors
[profile.dev.package."*"]
debug = 0
strip = "symbols"

[profile.test.package."*"]
debug = 0
strip = "symbols"

[profile.release.package."*"]
debug = 0
strip = "symbols"
