[package]
name = "fhirpath-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core FHIRPath engine implementation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log = "0.4.20"

# Parser dependencies
nom = "8.0.0"
regex = "1.10"

# Date/time and decimal arithmetic dependencies (from ADR)
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }

# UCUM library for quantity handling
octofhir-ucum-core = "0.2.5"
octofhir-ucum-fhir = { version = "0.2.5", features = ["serde"] }

# Performance optimization dependencies
rustc-hash = "1.1"
smallvec = { version = "1.11", features = ["serde"] }
base64 = "0.21"
hex = "0.4"

[features]
default = []
trace = []

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
criterion = { version = "0.5", features = ["html_reports"] }
quick-xml = "0.31"
serde-xml-rs = "0.6"



[profile.release]
debug = true
