[package]
name = "fhirpath-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core FHIRPath engine implementation"

[[bin]]
name = "fhirpath-test-runner"
path = "src/bin/test_runner.rs"


[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log = "0.4.20"

# Local crates
fhirpath-model = { path = "../fhirpath-model" }
fhirpath-parser = { path = "../fhirpath-parser" }
fhirpath-ast = { path = "../fhirpath-ast" }
fhirpath-diagnostics = { path = "../fhirpath-diagnostics" }
fhirpath-evaluator = { path = "../fhirpath-evaluator" }
fhirpath-registry = { path = "../fhirpath-registry" }

# Parser dependencies
nom = "8.0.0"
regex = "1.10"

# Date/time and decimal arithmetic dependencies (from ADR)
rust_decimal = { version = "1.32", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }

# UCUM library for quantity handling
octofhir-ucum-core = "0.4.0"
octofhir-ucum-fhir = { version = "0.4.0", features = ["serde"] }

# Performance optimization dependencies
rustc-hash = "2"
smallvec = { version = "1.11", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
lru = "0.16"

# Async runtime for FHIR Schema loading
tokio = { version = "1.35", features = ["rt", "macros"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# Threading and concurrency
parking_lot = "0.12"
thread_local = "1.1"

# For diagnostics
lsp-types = { version = "0.94", optional = true }

# XML parsing for conversion utilities
quick-xml = "0.31"

[features]
default = []
trace = []
async-schema = ["tokio", "reqwest"]
lsp-diagnostics = ["lsp-types"]
full = ["async-schema", "lsp-diagnostics"]

[dev-dependencies]

# Testing framework dependencies
pretty_assertions = "1.4.0"
rstest = "0.18.2"
criterion = { version = "0.5", features = ["html_reports"] }

# XML parsing for some test formats
quick-xml = "0.31"
serde-xml-rs = "0.6"

# For enhanced formatting and output
colored = "2.0"
comfy-table = "7.0"
