[package]
name = "fhirpath-evaluator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FHIRPath expression evaluation engine"

[dependencies]
fhirpath-ast = { path = "../fhirpath-ast" }
fhirpath-model = { path = "../fhirpath-model" }
fhirpath-parser = { path = "../fhirpath-parser" }
fhirpath-registry = { path = "../fhirpath-registry" }
fhirpath-diagnostics = { path = "../fhirpath-diagnostics" }
thiserror = { workspace = true }
rustc-hash = "2.0"
rust_decimal = "1.36"

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
