[package]
name = "fhirpath-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data model and value types for FHIRPath expressions"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Date/time and decimal arithmetic dependencies
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }
chrono = { version = "0.4.41", features = ["serde"] }

# UCUM library for quantity handling
octofhir-ucum-core = "0.4.0"

# Performance
parking_lot = "0.12.4"

# Optional async support for FHIR Schema loading
tokio = { version = "1.47.0", features = ["rt", "macros"], optional = true }
reqwest = { version = "0.12.22", features = ["json"], optional = true }

# Diagnostics
fhirpath-diagnostics = { path = "../fhirpath-diagnostics", optional = true }

[features]
default = []
async-schema = ["tokio", "reqwest"]
diagnostics = ["fhirpath-diagnostics"]

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"