[package]
name = "fhirpath-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FHIRPath expression parser using nom"

[dependencies]
# Local crates
fhirpath-ast = { path = "../fhirpath-ast" }
fhirpath-model = { path = "../fhirpath-model" }
fhirpath-diagnostics = { path = "../fhirpath-diagnostics" }

# Parser dependencies
nom = "8.0.0"
nom_locate = "5.0.0-beta.5"

# Core dependencies
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Date/time and decimal parsing
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }

# Unicode support
unicode-xid = "0.2.6"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
