[package]
name = "fhirpath-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Function and operator registry for FHIRPath"

[dependencies]
# Local crates
fhirpath-ast = { path = "../fhirpath-ast" }
fhirpath-model = { path = "../fhirpath-model" }

# Core dependencies
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Data structures
rustc-hash = "1.1"
indexmap = "2.0"

# String processing
regex = "1.10"

# Math and date/time
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde-with-str"] }

# UCUM support
octofhir-ucum-core = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"