[package]
name = "fhirpath-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Function and operator registry for FHIRPath"

[dependencies]
# Local crates
fhirpath-ast = { path = "../fhirpath-ast" }
fhirpath-model = { path = "../fhirpath-model" }

# Core dependencies
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Data structures
rustc-hash = "2.1.0"
indexmap = "2.10.0"

# String processing
regex = "1.11.1"
base64 = "0.22.1"

# Math and date/time
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-str"] }

# UCUM support
octofhir-ucum-core = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"