[package]
name = "fhirpath-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core workspace crates
octofhir-fhirpath = { path = "../crates/octofhir-fhirpath" }
octofhir-fhirpath-model = { path = "../crates/fhirpath-model" }
octofhir-fhirpath-evaluator = { path = "../crates/fhirpath-evaluator" }
octofhir-fhirpath-analyzer = { path = "../crates/fhirpath-analyzer" }
octofhir-fhirpath-registry = { path = "../crates/fhirpath-registry" }

# External dependencies
octofhir-fhirschema.workspace = true
octofhir-canonical-manager.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
divan = "0.1"

# Test utilities
env_logger = "0.11"

