[package]
name = "fhirpath-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Benchmarking suite for FHIRPath-rs using divan"
publish = false

[[bin]]
name = "fhirpath-bench"
path = "src/main.rs"

[dependencies]
# FHIRPath dependencies
octofhir-fhirpath-core = { path = "../fhirpath-core" }
octofhir-fhirpath-parser = { path = "../fhirpath-parser" }
octofhir-fhirpath-evaluator = { path = "../fhirpath-evaluator" }
octofhir-fhirpath-model = { path = "../fhirpath-model", features = [] }
octofhir-fhirpath-registry = { path = "../fhirpath-registry" }

# Benchmarking
divan = "0.1.14"

# Profiling and flamegraph
pprof = { workspace = true, features = ["flamegraph"] }

# CLI
clap.workspace = true

# JSON handling
serde.workspace = true
sonic-rs = { workspace = true }

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
log.workspace = true
env_logger = "0.11"
chrono.workspace = true

[features]
default = []

[lib]
name = "fhirpath_bench"
path = "src/lib.rs"
