[package]
name = "fhirpath-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for FHIRPath expression evaluation and testing"
readme = "../../README.md"
keywords = ["fhir", "fhirpath", "cli", "healthcare", "hl7"]
categories = ["command-line-utilities", "parser-implementations", "science"]
publish = false

[[bin]]
name = "octofhir-fhirpath"
path = "src/main.rs"

[dependencies]
octofhir-fhirpath = { path = "../octofhir-fhirpath" }
octofhir-fhirschema = { workspace = true }
octofhir-fhir-model = { workspace = true }

# Server dependencies  
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "catch-panic", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
octofhir-ucum = { workspace = true }
base64 = "0.22"
include_dir = "0.7"
mime_guess = "2.0"

# CLI dependencies
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
rustyline = { workspace = true }
tabled = "0.20"
human-panic = "2.0"
