[package]
name = "fhirpath-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for FHIRPath expression evaluation and testing"
readme = "../../README.md"
keywords = ["fhir", "fhirpath", "cli", "healthcare", "hl7"]
categories = ["command-line-utilities", "parser-implementations", "science"]
publish = false

[features]
default = ["embedded-providers", "dynamic-caching"]
embedded-providers = ["octofhir-fhirschema/embedded-providers"]
dynamic-caching = ["octofhir-fhirschema/dynamic-caching"]

[[bin]]
name = "octofhir-fhirpath"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
octofhir-fhirpath = { path = "../octofhir-fhirpath" }
octofhir-fhirschema = { workspace = true, features = ["embedded-providers", "dynamic-caching"] }
octofhir-fhir-model = { workspace = true }

# Server dependencies  
axum = { version = "0.8", features = ["multipart"] }
axum-macros = "0.4"
tower-http = { version = "0.6", features = ["cors", "catch-panic", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
octofhir-ucum = { workspace = true }
base64 = "0.22"
include_dir = "0.7"
mime_guess = "2.0"

# CLI dependencies
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
rustyline = { workspace = true }
tabled = "0.20"
human-panic = "2.0"

# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = "0.7.0"
dirs = "6"
toml = "0.9"
ariadne = "0.5.1"
