[package]
name = "octofhir-fhirpath-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and abstractions for FHIRPath implementation"
keywords = ["fhir", "fhirpath", "healthcare", "hl7"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
log = { workspace = true }

# FHIR model dependencies
octofhir-fhir-model = { workspace = true }
octofhir-ucum = { workspace = true }
rust_decimal = { workspace = true }

[features]
default = []
serde = []
