[package]
name = "fhirpath-dev-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Development and testing tools for FHIRPath implementation"
keywords = ["fhir", "fhirpath", "testing", "benchmarking", "dev-tools"]
categories = ["development-tools", "science"]
publish = false

[features]
default = []

[[bin]]
name = "test-runner"
path = "src/bin/test-runner.rs"

[[bin]]
name = "test-coverage"
path = "src/bin/test-coverage.rs"

[[bin]]
name = "octofhir-fhirpath-bench"
path = "src/bin/fhirpath-bench.rs"

[[bin]]
name = "generate-docs"
path = "src/bin/generate-docs.rs"

[[bin]]
name = "test-export"
path = "src/bin/test-export.rs"

[lints]
workspace = true

[dependencies]
octofhir-fhirpath = { path = "../octofhir-fhirpath" }
octofhir-fhirschema = { path = "../../../fhirschema/octofhir-fhirschema" }
octofhir-fhir-model = { workspace = true }

# Dev tools dependencies
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
clap = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
