[package]
name = "fhirpath-diagnostics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Diagnostic and error reporting for FHIRPath implementation"
keywords = ["fhir", "fhirpath", "diagnostics", "errors"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
# Core dependencies
fhirpath-core = { path = "../fhirpath-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

# Optional diagnostic dependencies
colored = { workspace = true, optional = true }
lsp-types = { workspace = true }

[features]
default = []
serde = []
terminal = ["colored"]